--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -36,6 +36,12 @@ Style/EachForSimpleLoop:
   Enabled: false
 Style/AndOr:
   Enabled: false
+Style/HashEachMethods:
+    Enabled: false
+Style/HashTransformKeys:
+    Enabled: false
+Style/HashTransformValues:
+    Enabled: false
 Style/DefWithParentheses:
   Enabled: false
 Style/FrozenStringLiteralComment:
@@ -48,3 +54,9 @@ Layout/ExtraSpacing:
 Layout/MultilineMethodCallIndentation:
   Enabled: true
   EnforcedStyle: indented
+
+Lint/RaiseException: 
+  Enabled: false
+Lint/StructNewOverride:
+  Enabled: false
+
